# DiscSecOps

./: .gitattributes  .gitignore  Dockerfile.dev  EMAIL_REGISTRATION_MERGE_20260214.md  Makefile  QUICK_START.md  README.md
.devcontainer/: Dockerfile  compose.yaml  devcontainer.json
.github/: dependabot.yml  dependabot.yml 
.github/workflows/: backend-ci.yml  backend-deploy.yml  backend-monitoring.yml  ci-cd.yml  codeql.yml  dependabot-auto-merge.yml  e2e-tests.yml  e2e.yml  frontend-ci.yml  frontend-deploy.yml  security-dashboard.yml  security-scans.yml  security.yml
backend/: .env.example  .gitignore  Dockerfile  FRONTEND_INTEGRATION_GUIDE.md  README.md  docker-compose.yaml  hello.py  nixpacks.toml  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  run_integration_tests.py  seed_db.py  setup.ps1  start_server.ps1
backend/alembic/: env.py
backend/alembic/versions/: 0afb44b7983e_refactor_email_auth_and_roles.py  3b031f97c2dc_initial_migration.py  4199a5b4252a_remove_is_superuser_column.py  70f30a12c96c_make_email_required.py  a17917ca66b4_refactor_username_email_auth.py  a1b2c3d4e5f6_initial_schema.py  cbd5972b0e0e_remove_global_roles_add_circle_role.py  d4b7ba48e649_add_updated_at_to_user.py  e2f23dba411a_refactor_circlemember_to_use_booleans.py  f76b7d889fc8_add_social_tables.py
backend/app/: main.py
backend/app/api/v1/endpoints/: auth.py  circle_members.py  circles.py  posts.py  users.py
backend/app/core/: config.py  db.py  limiter.py  security.py  security_headers.py
backend/app/db/: database.py  models.py
backend/app/schemas/: auth.py  social.py
backend/scripts/: cleanup_sessions.py  create_test_users.py  reset_db.py  verify_social_tables.py
backend/tests/: conftest.py  test_auth.py  test_integrations.py  test_smoke.py
backend/tests/e2e/: conftest.py
backend/tests/e2e/pages/: dashboard_page.py  login_page.py  registration_page.py
backend/tests/e2e/step_defs/: test_circle_role.py  test_login.py  test_registration.py  test_ui.py  test_user_dashboard.py
backend/tests/e2e/step_test/: test_login.py  test_registration.py  test_user_dashboard.py
backend/tests/helpers/: test_data.py
backend/tests/integration/: conftest.py  test_auth.py  test_circle_members.py  test_circles.py  test_posts.py  test_rate_limiting.py  test_users.py
backend/tests/unit/: conftest.py  test_auth_schemas.py  test_models.py  test_rate_limiting.py  test_security.py
docs/: BDD_CONFIGURATION.md  DEVSECOPS_SESSION_AUTH_GUIDE.md  ENVIRONMENT_IMPLEMENTATION.md  ENVIRONMENT_SETUP_GUIDE.md  ER_DIAGRAM.md  FRONTEND_INTEGRATION_GUIDE.md  FRONTEND_INTEGRATION_GUIDE_v2.md  GIT_COMMIT_GUIDE.md  IMPLEMENTATION_STATUS.md  QUICK_START.md  ROLE_HIERARCHY.md  SUMMARY.md  rate-limiting-implementation.md
docs/features/: circle-context-in-feed.feature  circle-role.feature  create-circle.feature  create-post.feature  global-roles.feature  initial-users.features  login.feature  registration.feature  user-dashboard-access-control.feature  user-dashboard-layout-components.feature  user-dashboard-logout.feature  user-dashboard.feature  user-posts.feature
features/: authentication.feature  login.feature  registration.feature  ui.feature  user-dashboard-data-loading.feature  user-dashboard-error-handling.feature  user-dashboard-welcome-message.feature
frontend/: .env.example  README.md  eslint.config.js  package-lock.json  package.json  playwright.config.js  setup-env.ps1  setup-env.sh  vite.config.js  vitest.config.js
frontend/src/: App.css  App.jsx  index.css  setupTests.js
frontend/src/config/: index.js
frontend/src/contexts/: AuthContext.js  AuthProvider.jsx  DarkModeProvider.jsx  useAuth.js
server/: index.js  package.json
tools/: ENVIRONMENT_IMPLEMENTATION.md  TEAM_IMPLEMENTATION_REPORT.md  generate-secrets.ps1  generate-secrets.py  generate-secrets.sh
(+68 files in other folders)
